why-us section img displaying bottom space on small screen fixed

--- a/css/style.css
+++ b/css/style.css
@@ -392,10 +392,15 @@ section{
     color:#fff;
 }
 
+#why-us{
+    position:relative;
+}
+
 #why-us img{
     display:block;
     margin-left:25px;
     position:absolute;
+    bottom:0;
 }
 
 body{
